@@ -109,7 +109,8 @@ export(evcent, bonpow, alpha.centrality)
 
 export(measure.dynamics.id, measure.dynamics.idage, measure.dynamics.d.d,
        measure.dynamics.citedcat.id.age, measure.dynamics.citingcat.id.age,
-       measure.dynamics.lastcit, measure.dynamics.age, measure.dynamics.citedcat)
+       measure.dynamics.lastcit, measure.dynamics.age, measure.dynamics.citedcat,
+       measure.dynamics.citingcat.citedcat)
 
 # isomorphism, motifs
 
